changes to get up-to-date with current local version: removed Jython support and use of Xstream to remove bloating dependencies; new build system solely based on ant; several new features, see Documentation/RELNOTES