@@ -1,4 +1,4 @@
-/*+********************************************************************* 
+/*+*********************************************************************
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
@@ -16,8 +16,22 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston MA 02111-1307, USA.
 
 package monq.jfa;
 
-import java.util.*;
+import java.io.IOException;
 import java.io.PrintStream;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.IdentityHashMap;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import monq.jfa.FaState.IterType;
+import monq.jfa.actions.DefaultAction;
 
 /**
  * <p>models a non-deterministic finite automaton.</p>
@@ -58,7 +72,8 @@ public class Nfa  {
   // markAsSub). Must not exceed 256 before addAction is called.
   private int subgraphID = 0;
 
-  private ParserView pView = new ParserView();
+  private final ParserView pView = new ParserView();
+  private double memoryForSpeedTradeFactor = 1.0;
 
   /**
    * <p>is used by each <code>Nfa</code> to obtain a default regular
@@ -66,7 +81,7 @@ public class Nfa  {
    *
    * @see #setReParser
    */
-  private static ReParserFactory defaultParserFactory 
+  private static ReParserFactory defaultParserFactory
     = ReClassicParser.factory;
   /**********************************************************************/
   /**
@@ -74,7 +89,7 @@ public class Nfa  {
    * obtain a default <code>ReParser</code>.</p>
    * @see #setReParser
    */
-  public static synchronized void 
+  public static synchronized void
     setDefaultParserFactory(ReParserFactory rpf) {
       defaultParserFactory = rpf;
     }
@@ -85,8 +100,8 @@ public class Nfa  {
    * @see #setReParser
    */
   public static synchronized ReParserFactory
-    getDefaultParserFactory(ReParserFactory rpf) {
-      return rpf;
+    getDefaultParserFactory() {
+      return defaultParserFactory;
     }
 
   /**
@@ -94,20 +109,20 @@ public class Nfa  {
    * rules of the current <code>ReParser</code> set for
    * <code>this</code>.</p>
    *
-   * @see  ReParser#escape(StringBuffer, CharSequence, int)
+   * @see  ReParser#escape(StringBuilder, CharSequence, int)
    */
   public String escape(String s) {
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     getReParser().escape(sb, s, 0);
     return sb.toString();
   }
   /**
    * <p>is only a pass-through to
-   * <code>getReParser().escape(...)</code>.</p> 
+   * <code>getReParser().escape(...)</code>.</p>
    *
-   * @see ReParser#escape(StringBuffer, CharSequence, int)
+   * @see ReParser#escape(StringBuilder, CharSequence, int)
    */
-  public void escape(StringBuffer out, CharSequence in, int startAt) {
+  public void escape(StringBuilder out, CharSequence in, int startAt) {
     getReParser().escape(out, in, startAt);
   }
   /**
@@ -117,26 +132,26 @@ public class Nfa  {
     return getReParser().specialChars();
   }
   /**********************************************************************/
-  
+
   /**
    * <p>is used for an enumeration type which determines which type of
    * empty <code>Nfa</code> is generated when calling {@link
    * monq.jfa.Nfa#Nfa(Nfa.EmptyNfaType)}. The possible values of this
    * class are defined as static fields of <code>Nfa</code>.</p>
    */
-  private static final class EmptyNfaType {
-    private EmptyNfaType() {}
+  private static enum EmptyNfaType {
+    T_NOTHING, T_EPSILON;
   }
   /**
    * value of an enumeration type to be passed to {@link
    * monq.jfa.Nfa#Nfa(Nfa.EmptyNfaType)}.
    */
-  public static final EmptyNfaType NOTHING = new EmptyNfaType();
+  public static final EmptyNfaType NOTHING = EmptyNfaType.T_NOTHING;
   /**
    * value of an enumeration type to be passed to {@link
    * monq.jfa.Nfa#Nfa(Nfa.EmptyNfaType)}.
    */
-  public static final EmptyNfaType EPSILON = new EmptyNfaType();
+  public static final EmptyNfaType EPSILON = EmptyNfaType.T_EPSILON;
 
   /**
    * <p>
@@ -160,10 +175,10 @@ public class Nfa  {
     if( type==EPSILON ) {
       // automaton recognizing the empty string
       optional();
-    }      
+    }
   }
   /**
-   * <p>creates an <code>Nfa</code> from the given 
+   * <p>creates an <code>Nfa</code> from the given
    * <a href="doc-files/resyntax.html">regular expression</a> and
    * assigns the given action to the stop state. More regex/action
    * pairs are then normally added with {@link
@@ -181,20 +196,51 @@ public class Nfa  {
   public Nfa(CharSequence regex) throws ReSyntaxException {
     this(regex, null);
   }
+
+  /**
+   * <p>
+   * when creating DFA transitions during NFA to DFA compilation, the
+   * transition tables use different implementations, depending on how dense
+   * the transition table is. The fastest transition table uses an array that
+   * is indexed by the transition character. For sparse tables, this is a
+   * significant memory overhead, therefore a denser table can be used which
+   * uses a binary search for lookup.
+   * </p>
+   *
+   * <p>
+   * The factor given defines how much larger the fast table may be, before
+   * the denser table is used. If the factor is 1.0, the implementation with
+   * the smaller estimated memory footprint is used. The larger the factor
+   * is, the more likely is it that even sparse tables still use the faster
+   * implementation. With a factor of several thousand, nearly all transition
+   * tables will be fast, possibly using up a lot of heap space.
+   * </p>
+   *
+   * The default is 1.0.
+   *
+   * @param f
+   */
+  public void setMemoryForSpeedTradeFactor(float f) {
+    memoryForSpeedTradeFactor = f;
+  }
+  public double getMemoryForSpeedTradeFactor() {
+    return memoryForSpeedTradeFactor;
+  }
   //-*******************************************************************
   /**
    * <p>initializes this automaton to recogize nothing.<p>
    */
   private void initialize() {
     start = new AbstractFaState.EpsState();
-    lastState = new AbstractFaState.EpsState();    
+    lastState = new AbstractFaState.EpsState();
   }
   //-*******************************************************************
   private void initialize(final CharSequence pairs, boolean invert) {
     start = new AbstractFaState.NfaState();
     lastState = new AbstractFaState.EpsState();
 
-    Intervals ivals = new Intervals();
+    IntervalsFaState ivals = new IntervalsFaState();
+
     if( pairs!=null ) {
       if( pairs.length()%2!=0 ) {
 	throw new IllegalArgumentException
@@ -207,8 +253,10 @@ public class Nfa  {
 	ivals.overwrite(from, to, lastState);
       }
     }
-    if( invert ) ivals.invert(lastState);
-    start.setTrans(ivals.toCharTrans());
+    if( invert ) {
+      ivals.invert(lastState);
+    }
+    start.setTrans(ivals.toCharTrans(memoryForSpeedTradeFactor));
   }
   //-*******************************************************************
   // initialize to a sequence of states that recognize exactly the
@@ -217,7 +265,7 @@ public class Nfa  {
     //System.out.println("+++"+s.toString());
     start = new AbstractFaState.NfaState();
 
-    Intervals assemble = new Intervals();
+    IntervalsFaState assemble = new IntervalsFaState();
     FaState current = start;
     FaState other;
     char ch;
@@ -226,42 +274,40 @@ public class Nfa  {
       other = new AbstractFaState.DfaState();
       ch = s.charAt(i);
       assemble.overwrite(ch, ch, other);
-      current.setTrans(assemble.toCharTrans());
+      current.setTrans(assemble.toCharTrans(memoryForSpeedTradeFactor));
       current = other;
     }
     lastState = new AbstractFaState.EpsState();
     ch = s.charAt(i);
     assemble.overwrite(ch, ch, lastState);
-    current.setTrans(assemble.toCharTrans());
+    current.setTrans(assemble.toCharTrans(memoryForSpeedTradeFactor));
   }
   private void initializeAsSequence(FaState start1, FaState last1,
-				    FaState start2, 
+				    FaState start2,
 				    AbstractFaState.EpsState last2) {
-    if( false) {
-      // FIX ME: 
-      // Since we are sure that start2 has no incoming transitions, we
-      // can drop that state if we transfer all its transitions to
-      // last1. Because last1 does not have any outgoing transitions,
-      // the transfer does not require any merging.
-      // BUT: This requires changing the type of lastState throughout to
-      // a class which accepts a CharTrans, which EpsState currently
-      // does not. Therefore the slightly less efficient solution below:
-      //last1.addEps(start2.getEps());
+    // FIX ME:
+    // Since we are sure that start2 has no incoming transitions, we
+    // can drop that state if we transfer all its transitions to
+    // last1. Because last1 does not have any outgoing transitions,
+    // the transfer does not require any merging.
+    // BUT: This requires changing the type of lastState throughout to
+    // a class which accepts a CharTrans, which EpsState currently
+    // does not. Therefore the slightly less efficient solution below:
+    //last1.addEps(start2.getEps());
       //last1.setTrans(start2.getTrans());
+    if( !start2.isImportant() ) {
+      last1.addEps(start2.getEps());
     } else {
-      if( !start2.isImportant() ) {
-	last1.addEps(start2.getEps());
-      } else {
-	last1.addEps(start2);
-      }
+      last1.addEps(start2);
     }
+
     start = start1;
     lastState = last2;
   }
   //-*******************************************************************
-  private void initializeAsOr(FaState start1, 
+  private void initializeAsOr(FaState start1,
 			      AbstractFaState.EpsState last1,
-			      FaState start2, 
+			      FaState start2,
 			      AbstractFaState.EpsState last2) {
     // To conserve objects, we want to use one of the last states as
     // the new lastState. However, a state with an action is not a
@@ -279,7 +325,7 @@ public class Nfa  {
 	// this one can serve as a useful new lastState
 	lastState = last2;
 	last1.addEps(lastState);
-      } 
+      }
     } else {
       // last1 is a good new lastState
       lastState = last1;
@@ -301,7 +347,7 @@ public class Nfa  {
   }
   //-*******************************************************************
 //   /**
-//    * creates an <code>Nfa</code> from the given 
+//    * creates an <code>Nfa</code> from the given
 //    * <a href="doc-files/resyntax.html">regular expression</a>.
 //    */
 //   public Nfa(CharSequence s) throws ReSyntaxException {
@@ -309,22 +355,18 @@ public class Nfa  {
 //   }
   /**********************************************************************/
   // to be able to test different Set implementations
-//   private static Set newSet() { return new LeanSet(); }
-//   private static Set newSet(int s) { return new LeanSet(s); }
-//   private static Set newSet(Collection c) { return new LeanSet(c); }
+  private static <E> Set<E> newSet() { return new PlainSet<>(); }
+  private static <E> Set<E> newSet(int s) { return new PlainSet<>(s); }
+  private static <E> Set<E> newSet(Collection<E> c) { return new PlainSet<>(c); }
 
-//  private static Set newSet() { return new PlainSet(); }
-//  private static Set newSet(int s) { return new PlainSet(s); }
-//  private static Set newSet(Collection c) { return new PlainSet(c); }
+//   private static <E> Set<E> newSet() { return new HashSet<E>(16, 1.0F); }
+//   private static <E> Set<E> newSet(int s) { return new HashSet<E>(s, 1.0F); }
+//   private static <E> Set<E> newSet(Collection<E> c) {
+//     Set<E> h = new HashSet<E>(c.size()+1, 1.0F);
+//     h.addAll(c);
+//     return h;
+//   }
 
-   private static <E> Set<E> newSet() { return new HashSet<E>(16, 1.0F); }
-   private static <E> Set<E> newSet(int s) { return new HashSet<E>(s, 1.0F); }
-   private static <E> Set<E> newSet(Collection<E> c) { 
-     Set<E> h = new HashSet<E>(c.size()+1, 1.0F);
-     h.addAll(c);
-     return h;
-   }
-  
   //-*******************************************************************/
   /**
    * <p>returns the regular expression parser currently used by this
@@ -345,44 +387,12 @@ public class Nfa  {
     return this;
   }
   //-********************************************************************/
-//   /**
-//    * used in high volume Nfa creation to conserve space. To be able to
-//    * parse a regular expression, an Nfa creates an internal parser
-//    * object. To prevent the parser object to be created and thereby
-//    * save quite some space, use this method of an already available
-//    * Nfa to create new Nfas instead of creating them with the
-//    * constructor. 
-//    * @deprecated will disappear soon.
-//    */
-//   public Nfa parse(CharSequence s, FaAction a) throws ReSyntaxException {
-//     // the parsing will mess with start and lastState, so we have to
-//     // keep them on the side.
-//     FaState keepStart = start;
-//     AbstractFaState.EpsState keepLast = lastState;
-
-//     setRegex(s);
-//     addAction(a);
-
-//     Nfa result = new Nfa(start, lastState);
-//     start = keepStart;
-//     lastState = keepLast;
-//     return result;
-//   }
-
-//   /**
-//    * <p>expert only.</p>
-//    * @deprecated will disappear soon.
-//    */
-//   public Nfa parse(CharSequence s) throws ReSyntaxException {
-//     return parse(s, null);
-//   }
-  /**********************************************************************/
   FaState getStart() {return start;}
   //private AbstractFaState.EpsState getLastState() {return lastState;}
 
   /**
    * <p>adds an action to the Nfa (expert only).  This is done by
-   * adding an epsilon transition to the last state of this Nfa to a
+   * adding an epsilon transition of the last state of this Nfa to a
    * new last state which will carry the action.</p>
    *
    * <p>If the automaton has free subgraphs, these will be bound to
@@ -395,45 +405,40 @@ public class Nfa  {
   public Nfa addAction(FaAction a) {
     if( a==null ) return this;
 
-    AbstractFaState.EpsStopState newLast;
-    newLast = new AbstractFaState.EpsStopState(a);
+    AbstractFaState.EpsStopState newLast = new AbstractFaState.EpsStopState(a);
     lastState.addEps(newLast);
     lastState = newLast;
-    addSubAction(start, a, Nfa.<FaState>newSet());
-    
+
+    FaStateTraverser<FaAction> fasVis = new FaStateTraverser<>(IterType.ALL, a);
+    fasVis.traverse(start, new FaStateTraverser.StateVisitor<FaAction>() {
+      @Override
+      public void visit(FaState state, FaAction action) {
+        state.reassignSub(null, action);
+      }
+    });
+
     // All unbound subgraphs are now bound to an action. Since a
     // subgraph is identified by a pair (FaAction a, byte id), now is
     // the time to reset the id counter in our ReParser.
     subgraphID = 0;
     return this;
   }
-  private void addSubAction(FaState s, FaAction a, Set<FaState> known) {
-    s.reassignSub(null, a);
-    known.add(s);
-    Iterator children = s.getChildIterator();
-    while( children.hasNext() ) {
-      Object o = children.next();
-      if( known.contains(o) ) continue;
-      addSubAction((FaState)o, a, known);
-    }
-    
-  }
-
+  
+  /*+******************************************************************/
   public void toDot(PrintStream out) {
     FaToDot.print(out, start, lastState);
   }
-
+  /*+******************************************************************/
+  public void toDot(String filename) {
+    try {
+      PrintStream out = new PrintStream(filename, "UTF-8");
+      toDot(out);
+      out.close();
+    } catch (IOException e) {
+      e.printStackTrace();
+    }
+  }
   /**********************************************************************/
-  /**
-   * makes sure this.reParser is not null and then calls it to parse the
-   * regex.
-   */
-//   private void setRegex(CharSequence s) throws ReSyntaxException {
-//     ReParser rp = getReParser();
-//     Nfa nfa = rp.parse(s);
-//     this.start = nfa.start;
-//     this.lastState = nfa.lastState;
-//   }
   /**
    * for internal use by {@link Dfa#toNfa()} only.
    */
@@ -441,49 +446,7 @@ public class Nfa  {
     this.start = start;
     this.lastState = lastState;
   }
-//   void initialize(Intervals ivals) {
-//     lastState = new AbstractFaState.EpsState();
-//     int L = ivals.size();
-//     for(int i=0; i<L; i++) {
-//       if( ivals.getAt(i)==null ) continue;
-//       ivals.setAt(i, lastState);
-//     }
-//     start = new AbstractFaState.NfaState();
-//     start.setTrans(ivals.toCharTrans());
-//   }
-//   void initialize(StringBuffer s) {
-//     //System.out.println("+++"+s.toString());
-//     start = new AbstractFaState.NfaState();
 
-//     Intervals assemble = new Intervals();
-//     FaState current = start;
-//     FaState other;
-//     char ch;
-//     int i, L;
-//     for(i=0, L=s.length(); i<L-1; i++) {
-//       other = new AbstractFaState.DfaState();
-//       ch = s.charAt(i);
-//       assemble.overwrite(ch, ch, other);
-//       current.setTrans(assemble.toCharTrans());
-//       current = other;
-//     }
-//     lastState = new AbstractFaState.EpsState();
-//     ch = s.charAt(i);
-//     assemble.overwrite(ch, ch, lastState);
-//     current.setTrans(assemble.toCharTrans());
-//   }    
-  /********************************************************************/
-  /**
-   * creates a generally useful empty <code>CharTrans</code>. It is
-   * expected, that this function will be modified in the future if
-   * different kinds of CharTrans classes become available.
-   *
-   * @return a generally useful empty <code>CharTrans</code>.
-   */
-//   public static CharTrans createCharTrans() { 
-//     //return new SimpleCharTrans();
-//     return new ArrayCharTrans();
-//   }
   /**********************************************************************/
   /**
    * <p>marks this automaton as a reporting subautomaton. It will of
@@ -529,7 +492,7 @@ public class Nfa  {
   // marked as an inner state. States that a merely reachable via an
   // epsilon transition, are not marked. The parent is not touched
   // here.
-  private void _markAsSub(FaState parent, 
+  private void _markAsSub(FaState parent,
 			  FaSubinfo innerInfo, boolean innerValid,
 			  Set<FaState> known) {
     known.add(parent);
@@ -539,7 +502,7 @@ public class Nfa  {
     if( trans!=null ) {
       int N = trans.size();
       for(int i=0; i<N; i++) {
-	FaState child = (FaState)(trans.getAt(i));
+	FaState child = (trans.getAt(i));
 	child.addUnassignedSub(innerInfo);
 	if( known.contains(child) ) continue;
 	_markAsSub(child, innerInfo, true, known);
@@ -575,11 +538,11 @@ public class Nfa  {
   // | The following operators maintain the two assertion:
   // | A) the start state has no incoming transitions
   // | B) the stop state has no outgoing transitions
-  // | This is required for Thompson's construction to work properly. 
+  // | This is required for Thompson's construction to work properly.
   // ------------------------------------------------------
   /**
    * <p>transforms this finite automaton to match the empty string
-   * too. All actions defining stop states are kept as they are. 
+   * too. All actions defining stop states are kept as they are.
    * This method implements the operator <code>?</code>.<p>
    *
    * @return the return value is <code>this</code>.
@@ -608,132 +571,214 @@ public class Nfa  {
     embed();
     return this;
   }
-  
-  /**********************************************************************/
-  private static class Useful {
-    // This can be '?', 'x', 'y' or 'n'. 
-    // Initially '?' tells us we don't know yet
-    // It will be 'x' while currently trying to recursively figure out
-    // Finally, 'y' for "yes" and 'n' for" "no" will be set, where 'n'
-    // can only be decided on in the toplevel invocation.
-    char useful = '?';
-    boolean isPruned = false;
-  }
-  
-  private char isUseful(FaState s, IdentityHashMap<FaState,Useful> known,
-                        boolean top) {
-    Useful u = (Useful)known.get(s);
-    if( u==null ) {
-      u = new Useful();
-      known.put(s, u);
-    } else {
-      if( u.useful!='?' ) return u.useful;
-    }
-
-    // lastState and stop states are useful
-    if( null!=s.getAction() || s==lastState ) {
-      u.useful = 'y';
-      return u.useful;
-    }
-
-    // guard against recursively checking this state again
-    u.useful = 'x';
-
-    // if we find one useful child, this state is useful too
-    Iterator i = s.getChildIterator();
-    while( i.hasNext() ) {
-      FaState child = (FaState)i.next();
-      char useful = isUseful(child, known, false);
-      if( useful!='y' ) continue;
-      u.useful = 'y';
-      return u.useful;
-    }
-
-    // If we arrive here, we could not prove in any branch that this
-    // state is useful. If we are at the top of the recursive calls,
-    // this means the state is indeed not useful. However, deep down
-    // in the recursive invocations, it means nothing
-    u.useful = top ? 'n' : '?';
-    return u.useful;
-  }
-
+  /*+******************************************************************/
   /**
-   * deletes states which have no path to neither a stop state nor to
-   * lastState. 
+   * <p>extends the automaton with an additonal automaton which matches
+   * everything but all non-empty prefixes of this automaton.</p>
+   * 
+   * <p>For example, if this automaton matches "abc", the addional automaton
+   * matches every string that does not contain "a", "ab" or "abc". The
+   * additional automaton will have the given action attached.</p>
+   * 
+   * <p>The resulting, combined automaton will nearly never hit a no-match
+   * situation when used as a filter. The only exception is when the input
+   * ends in a true prefix of the original automaton.
+   * 
+   * Informally, the operation performed is as follows:</p>
+   * 
+   * <pre>this.or(this.copy().allPrefixes().not())</pre>
+   * 
+   * @param noMatchAction the action to call when the additional automaton
+   *        runs into a match, i.e. when the {@code this} does not match.
+   *        
+   * @throws CompileDfaException if {@code this} automaton does not compile.
    */
-  private void deleteUseless(FaState s, IdentityHashMap<FaState,Useful> known) {
-    //System.err.println("dU"+s);
-    Useful u = (Useful)known.get(s);
-    if( u==null ) {
-      u = new Useful();
-      known.put(s, u);
-    }
-    u.isPruned = true;
+  public Nfa completeToSkip(FaAction noMatchAction) throws CompileDfaException {
+    Dfa dfa = compile(DfaRun.UNMATCHED_THROW);
+    allPrefixes();
+    not();
 
-    // we cannot use the child iterator because we may want to delete
-    // outgoing transitions.
-    int L = 0;
-    FaState[] eps = s.getEps();
-    if( eps!=null ) L = eps.length;
-    int dst = 0;    
-    for(int i=0; i<L; i++) {
-      FaState child = eps[i];
-      Useful cu = (Useful)known.get(child);
-      if( cu==null || !cu.isPruned ) deleteUseless(child, known);
-      char useful = isUseful(child, known, true);
-      if( 'y'==useful ) eps[dst++] = eps[i];
+    addAction(noMatchAction);
+    or(dfa.toNfa());
+    return this;
+  }
+  /*+******************************************************************/
+  /**
+   * converts the automaton into one which matches all non-empty prefixes of
+   * the given automaton.
+   * 
+   * Any actions already specified will be deleted.
+   * 
+   * @param action
+   * @throws CompileDfaException if the internally called compile operation
+   *         throws this exception
+   */
+  public void allPrefixes() throws CompileDfaException {
+    if (null==lastState.getAction()) {
+      addAction(DefaultAction.nullInstance());
     }
-    if( dst<L ) {
-      FaState[] newEps = null;
-      if( dst>0 ) {
-	newEps = new FaState[dst];
-	System.arraycopy(eps, 0, newEps, 0, dst);
+    // need an automaton were all states can carry eps-transitions
+    FaState dfaStart = compile_p(true);
+
+    start = new AbstractFaState.EpsState();
+    start.addEps(dfaStart);
+    lastState = new AbstractFaState.EpsState();
+    
+    // everything shall become a stop state, but not useless states
+    removeUseless();
+    
+    FaStateTraverser<FaState> ft =
+        new FaStateTraverser<>(IterType.ALL, dfaStart);
+
+    ft.traverse(dfaStart, new FaStateTraverser.StateVisitor<FaState>() {
+      @Override
+      public void visit(FaState state, FaState exclude) {
+        if (state==exclude) {
+          return;
+        }
+        state.clearAction();
+        state.addEps(lastState);
       }
-      s.setEps(newEps);
+    });
+  }
+  /*+******************************************************************/
+  private void removeUseless() {
+    // TODO: refactor, at least by extracting the loops into methods
+    Map<FaState,Boolean> stateUseful = new IdentityHashMap<>();
+    ArrayList<FaState> states = new ArrayList<>();
+
+    states.add(start);
+    int nextState = 0;
+    while (nextState<states.size()) {
+      FaState state = states.get(nextState++);
+      stateUseful.put(state, state.getAction()!=null || state==lastState);
+      Iterator<FaState> children = state.getChildIterator(IterType.ALL);
+      while (children.hasNext()) {
+        FaState child = children.next();
+        if (stateUseful.containsKey(child)) {
+          continue;
+        }
+        states.add(child);
+      }
+    }
+    // repeatedly iterate over all states and see if one of their children is
+    // useful, which makes the state itself useful. Repeat until no new
+    // useful state is found.
+    boolean foundOne;
+    do {
+      foundOne = false;
+      // reverse iteration tends to hit children earlier, allowing to mark as
+      // useful many states in one sweep
+      for (int i=states.size()-1; i>=0; i--) {
+        FaState state = states.get(i);
+        if (stateUseful.get(state)) {
+          continue;
+        }
+        Iterator<FaState> children = state.getChildIterator(IterType.ALL);
+        while (children.hasNext()) {
+          if (stateUseful.get(children.next())) {
+            stateUseful.put(state, Boolean.TRUE);
+            foundOne = true;
+            break;
+          }
+        }
+      }
+    } while (foundOne);
+
+    // TODO: refactor this mess
+    // remove all useless states
+    if (!stateUseful.get(start)) {
+      initialize();
+      return;
     }
 
-    CharTrans t = s.getTrans();
+    IntervalsFaState worker = new IntervalsFaState();
+    for (int i=0; i<states.size(); i++) {
+      FaState state = states.get(i);
+      Boolean b = stateUseful.get(state);
+      if (!b) {
+        continue;
+      }
+      removeUselessEps(state, stateUseful);
+      removeUselessCharTrans(state, stateUseful, worker);
+      worker.reset();
+    }
+  }
+  /*+******************************************************************/
+  private void removeUselessCharTrans(FaState state,
+                                      Map<FaState,Boolean> useful,
+                                      IntervalsFaState ivalsWorker) {
+    CharTrans t = state.getTrans();
     if( t==null ) return;
 
     // Since CharTrans is immutable, we move things into an Intervals
-    // object. Onle if we remove at least one transition will be
+    // object. Only if we remove at least one transition will be
     // create a new CharTrans from the Intervals.
-    Intervals ivals = new Intervals(t);
+
     boolean removedOne = false;
-    L = ivals.size();
+    ivalsWorker.setFrom(t);
+    int L = ivalsWorker.size();
     for(int i=0; i<L; i++) {
-      FaState child = (FaState)ivals.getAt(i);
-      if( child==null ) continue;
-      Useful cu = (Useful)known.get(child);
-      if( cu==null || !cu.isPruned ) deleteUseless(child, known);
-      char useful = isUseful(child, known, true);
-      if( 'y'==useful ) continue;
-      ivals.setAt(i, null);
-      removedOne = true;
+      FaState child = ivalsWorker.getAt(i);
+      if (child==null) {
+        continue;
+      }
+      Boolean b = useful.get(child);
+      if (!b) {
+        ivalsWorker.setAt(i, null);
+        removedOne = true;
+      }
     }
-    if( removedOne ) s.setTrans(ivals.toCharTrans());
+    if (removedOne) {
+      state.setTrans(ivalsWorker.toCharTrans(memoryForSpeedTradeFactor));
+    }
   }
-  /**********************************************************************/
-  /**
-   * recursively completes all transition tables, removes actions and
-   * adds epsilon transitions to a new last state. Only character
-   * transitions are traversed because the automaton was compiled just
-   * before.
-   */
-  private void invertState(FaState s, Set<FaState> known, 
-			   FaState sink, FaState last,
-			   Intervals worker) {
-    known.add(s);
-    CharTrans t = s.getTrans();
-    int L = t==null ? 0 : t.size();
-    for(int i=0; i<L; i++) {
-      FaState child = (FaState)(t.getAt(i));
-      if( known.contains(child) ) continue;
-      invertState(child, known, sink, last, worker);
+  /*+******************************************************************/
+  private static void
+  removeUselessEps(FaState state, Map<FaState,Boolean> useful) {
+    FaState[] eps = state.getEps();
+    if (eps==null) {
+      return;
     }
-    if( s.getAction()!=null ) s.clearAction();
-    else s.addEps(last);
-    s.setTrans(worker.setFrom(t).complete(sink).toCharTrans());
+    int dst = 0;
+    for (int i=0; i<eps.length; i++) {
+      if (useful.get(eps[i])) {
+        eps[dst++] = eps[i];
+      }
+    }
+    if (dst==0) {
+      state.setEps(null);
+    } else {
+      if (dst<eps.length) {
+        eps = Arrays.copyOf(eps, dst);
+      }
+      state.setEps(eps);
+    }
+  }
+  /*+******************************************************************/
+  /**
+   * recursively completes all transition tables, removes actions and adds
+   * epsilon transitions to a new last state. Only character transitions, not
+   * epsilon transitions, are traversed because the automaton was compiled
+   * just before.
+   */
+  private void invertState(FaState initialState,
+			   final FaState sink, final FaState last,
+			   final IntervalsFaState worker) {
+    FaStateTraverser<Void> fasTrav = new FaStateTraverser<>(IterType.CHAR, null);
+
+    fasTrav.traverse(initialState, new FaStateTraverser.StateVisitor<Void>() {
+      @Override public void visit(FaState state, Void xd) {
+        if (state.getAction()==null) {
+          state.addEps(last);
+        } else {
+          state.clearAction();
+        }
+        worker.setFrom(state.getTrans());
+        worker.complete(sink);
+        state.setTrans(worker.toCharTrans(memoryForSpeedTradeFactor));
+      }});
+
   }
   /**
    * <p>inverts the automaton, such that the resulting automaton will
@@ -760,12 +805,11 @@ public class Nfa  {
     // treated like a stop state afterwards. Consequently we
     // temporarily make it into a stop state, if necessary.
     if( lastState.getAction()==null ) {
-      FaAction mark = new monq.jfa.actions.Copy(Integer.MIN_VALUE);
-      addAction(mark);
+      addAction(DefaultAction.nullInstance());
     }
     
     // need to manufacture some CharTrans, so we need this.
-    Intervals worker = new Intervals();
+    IntervalsFaState worker = new IntervalsFaState();
 
     // This automaton needs to be compiled; we lose the lastState by
     // this, but will add a new one later on
@@ -773,21 +817,23 @@ public class Nfa  {
 
     AbstractFaState.EpsState newLast = new AbstractFaState.EpsState();
     FaState sinkState = AbstractFaState.createDfaState(null, true);
-    sinkState.setTrans(worker.complete(sinkState).toCharTrans());
+    worker.complete(sinkState);
+    sinkState.setTrans(worker.toCharTrans(memoryForSpeedTradeFactor));
 
     sinkState.addEps(newLast);
-    invertState(dfaStart, Nfa.<FaState>newSet(), sinkState, newLast, worker);
+
+    invertState(dfaStart, sinkState, newLast, worker);
 
     start = new AbstractFaState.EpsState();
     start.addEps(dfaStart);
     lastState = newLast;
     
-    // all this can have produced useless state. We don't want to keep
-    // them.
-    deleteUseless(start, new IdentityHashMap<FaState,Useful>());
+    // This may have produced useless states. We don't want to keep them.
+    removeUseless();
+    
     return this;
   }
-  /**********************************************************************/
+  /*+******************************************************************/
   /**
    * <p>implements the request <em>match everthing but X</em>. While
    * {@link #invert} implements the more theoretical set complement
@@ -803,7 +849,7 @@ public class Nfa  {
    *
    * After application of <code>invert()</code>, the result, namely
    * <code>"([A-Z]+)~"</code>, will match all strings
-   * 
+   *
    * <blockquote>which are <span style="color:red">not</span> completely
    * uppercase.</blockquote>
    *
@@ -819,7 +865,7 @@ public class Nfa  {
    * <p>The following is an example application of
    * <code>not()</code>. It shows a way to enclose words
    * separated by white space with angle brackets:</p><pre>
-   * Nfa n = new Nfa("([ \t\n\r]+)^", 
+   * Nfa n = new Nfa("([ \t\n\r]+)^",
    *                 new AbstractFaAction.Printf("[%0]"))
    * </pre>
    * <p>The caret (<code>"^"</code>) is the operator applying
@@ -847,10 +893,12 @@ public class Nfa  {
   }
   /**********************************************************************/
   /**
-   * used below by <code>shortest</code> to recursively prune outgoing
+   * used by <code>shortest</code> to recursively prune outgoing
    * transitions of stop states.
+   * 
+   * TODO: get rid of recursion, use FaStateTraverser instead.
    */
-  private void trimStopState(FaState s, Set<FaState> known, 
+  private void trimStopState(FaState s, Set<FaState> known,
 			     FaState newLast, FaAction mark) {
     known.add(s);
     FaAction a = s.getAction();
@@ -858,7 +906,7 @@ public class Nfa  {
     if( a!=null ) {
       // character transitions are cleared before we go recursive
       // because any children becoming disconnected are not interesting
-      // anyway. The 'if' is necessary because a some states don't
+      // anyway. The 'if' is necessary because some states don't
       // have a CharTrans
       if( s.getTrans()!=null ) s.setTrans(null);
       if( a==mark ) s.clearAction();
@@ -869,9 +917,9 @@ public class Nfa  {
     // subgraph information. We have to remove it again.
     s.reassignSub(mark, null);
 
-    Iterator i = s.getChildIterator();
+    Iterator<FaState> i = s.getChildIterator(IterType.ALL);
     while( i.hasNext() ) {
-      FaState child = (FaState)i.next();
+      FaState child = i.next();
       if( known.contains(child) ) continue;
       trimStopState(child, known, newLast, mark);
     }
@@ -884,7 +932,7 @@ public class Nfa  {
    * <em>shortest matches</em> of the given Nfa. This operation is
    * best understood by its implementation, which compiles the Nfa
    * into a Dfa and then removes all outgoing links of any stop
-   * states. 
+   * states.
    *
    * <p>If <code>this</code> has not stop state yet, the operation
    * is actually not well defined. Therefore and to avoid
@@ -921,7 +969,7 @@ public class Nfa  {
 
     return this;
   }
-  
+
   /**********************************************************************/
   /**
    * <p>extend the current automaton to recognize <code>regex</code>
@@ -929,21 +977,21 @@ public class Nfa  {
    * given action to be called if the suffix was recognized. If the
    * action is <code>null</code>, no action will be added.</p>
    */
-  public Nfa seq(CharSequence regex, FaAction a) 
-    throws ReSyntaxException 
+  public Nfa seq(CharSequence regex, FaAction a)
+    throws ReSyntaxException
   {
     getReParser().parse(pView, regex);
     addAction(a);
     pView.seq();
     return this;
-  } 
+  }
   /**
    * <p>calls {@link #seq(CharSequence,FaAction)} with
    * <code>null</code> as the 2nd parameter.</p>
    */
   public Nfa seq(CharSequence s) throws ReSyntaxException {
     return seq(s, null);
-  } 
+  }
   /**
    * <p> Concatenates <code>other</code> to <code>this</code> such that a
    * sequence of characters <em>vw</em> is matched where <em>v</em> is
@@ -966,8 +1014,8 @@ public class Nfa  {
    * <p>adds the given regular expression <code>re</code> to the
    * automaton and associates it with the given action. </p>
    */
-  public Nfa or(CharSequence regex, FaAction action) 
-    throws ReSyntaxException 
+  public Nfa or(CharSequence regex, FaAction action)
+    throws ReSyntaxException
   {
     getReParser().parse(pView, regex);
     addAction(action);
@@ -999,16 +1047,16 @@ public class Nfa  {
   }
   /**********************************************************************/
   // is a convenience wrapper around findAction for use in findPath
-  private boolean hasAction(Set nfaStates) {
-    Vector<Object[]> clashes = new Vector<Object[]>(3);
+  private static boolean hasAction(Set<FaState> nfaStates) {
+    List<Clash> clashes = new LinkedList<>();
     Set<FaAction> actions = new HashSet<FaAction>(3);
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     return null!=findAction(sb, 'a', 'a', clashes, actions, nfaStates);
   }
   /**********************************************************************/
   /**
    * is a very inefficient way to use an Nfa for matching, mainly
-   * intended for crosschecks in unit-testing. 
+   * intended for crosschecks in unit-testing.
    */
   int findPath(String s) {
     int lastMatch;
@@ -1021,9 +1069,9 @@ public class Nfa  {
     else lastMatch = -1;
 
     for(int i=0, L=s.length(); i<L && current.size()>0; i++) {
-      char ch = s.charAt(i);      
-      for(Iterator j=current.iterator(); j.hasNext(); ) {
-	FaState state = (FaState)j.next();
+      char ch = s.charAt(i);
+      for(Iterator<FaState> j=current.iterator(); j.hasNext(); ) {
+	FaState state = j.next();
 	state = state.follow(ch);
 	if( state!=null ) {
 	  //System.out.println("followed "+ch);
@@ -1040,20 +1088,20 @@ public class Nfa  {
   /**********************************************************************/
   // generate a human readable exception from the clash information
   // collected during compilation.
-  private String clashToString(Vector clashes) 
-    throws CompileDfaException {
+  private static String clashToString(List<Clash> clashes) {
 
-    StringBuffer s = new StringBuffer(200);
+    StringBuilder s = new StringBuilder(200);
     s.append(CompileDfaException.EAMBIGUOUS)
       .append(".\nThe following set(s) of clashes exist:\n");
-    for(int i=0; i<clashes.size(); i++) {
-      Object[] actions = (Object[])clashes.get(i);
-      s.append(i+1)
+
+    int i = 1;
+    for(Clash clash: clashes) {
+      s.append(i++)
 	.append(") path `")
-	.append(actions[actions.length-1])
+	.append(clash.message)
 	.append("':\n");
-      for(int k=0; k<actions.length-1; k++) {
-	s.append("    ").append(actions[k]).append('\n');
+      for(FaAction action : clash.actions) {
+	s.append("    ").append(action).append('\n');
       }
     }
     return s.toString();
@@ -1066,140 +1114,136 @@ public class Nfa  {
     and have no outgoing non-epsilons.
   *****/
   private static void eclosure(Set<FaState> states) {
-    List<FaState> stack = new ArrayList<FaState>(states.size()+20);
-    stack.addAll(states);
-    Set<FaState> tmpResult = Nfa.<FaState>newSet(states.size()+20);
-    states.clear();
+    LinkedList<FaState> stack = new LinkedList<FaState>();
+    Set<FaState> closure = Nfa.<FaState>newSet(states.size()+20);
 
+    stack.addAll(states);
+    states.clear();
     while( stack.size()>0 ) {
-      FaState ns = (FaState)stack.remove(stack.size()-1);
-      tmpResult.add(ns);
+      FaState ns = stack.removeLast();
+      closure.add(ns);
       FaState[] eps = ns.getEps();
       if( eps==null ) continue;
       for(int i=0; i<eps.length; i++) {
-	if( tmpResult.contains(eps[i]) ) continue;
+	if( closure.contains(eps[i]) ) continue;
 	stack.add(eps[i]);
       }
-   }
+    }
 
-    // Delete unimportant states from tmpResult while copying back into
-    // states. 
-    for(Iterator i=tmpResult.iterator(); i.hasNext(); /**/) {
-      FaState ns = (FaState)i.next();
-      if( ns.isImportant() ) states.add(ns);
+    // Delete unimportant states from tmpResult while copying back into states.
+    for(FaState s : closure) {
+      if (s.isImportant()) {
+        states.add(s);
+      }
     }
   }
   /********************************************************************/
   // finds the action to be associated with a set of nfaStates. This
-  // function is a mess, mainly because it collects all relevant
-  // information about the clash in 'classes' in order to allow a
-  // complete and helpful error report later.
+  // function is a mess, because it collects error information in clashes to
+  // allow a complete and helpful error report later.
+
   // dfaPath -- character ranges denoting a shortest path through the
   // Dfa to the parent state of the state we want to find an action
-  // for 
+  // for
 
   // first, last -- contain the last step not yet reflected in
   // dfaPath. It is not yet in there for efficiency reasons because it
   // is only needed in case of error. The order of first, last may be
   // inverted to show that it is not really a step
 
-  // clashes -- will receive an additional FaAction[] if a clash
-  // happens 
+  // clashes -- will receive an additional Clash if a clash happens
+
   // actions -- is preallocated reusable space to keep track of the
   // actions found (reminds me a bit about old FORTRAN:-)
+
   // nfaStates -- is the set of NFA states within which we look for
-  // the highest priority action. A clash is defined by having too or
-  // more non-identical highest priority actions.
-  private static FaAction findAction(StringBuffer dfaPath, 
-				     char first, char last,
-				     Vector<Object[]> clashes,
-				     Set<FaAction> actions, 
-				     Set nfaStates) 
-    //throws CompileDfaException 
+  // the highest priority action. A clash is defined by having two or
+  // more non mergable actions.
+  private static FaAction findAction(StringBuilder dfaPath, char first,
+                                     char last, List<Clash> clashes,
+                                     Set<FaAction> actions,
+                                     Set<FaState> nfaStates)
   {
-    FaAction action = null;
+    FaAction actionFound = null;
     actions.clear();
 
-    for(Iterator i=nfaStates.iterator(); i.hasNext(); /**/) {
-      FaState ns = (FaState)i.next();
+    for(FaState ns : nfaStates) {
       FaAction a = ns.getAction();
-      if( a==null ) continue;
-      for(Iterator ia=actions.iterator(); ia.hasNext(); /**/) {
-	FaAction oldAction = (FaAction)ia.next();
-
-	// XXX: try to merge the two actions either way. This is the
-	// closest to symmetric operation I can think of. Is there a
-	// good way to enforce real symmetry?
-	FaAction tmp = a.mergeWith(oldAction);
-	if( tmp==null ) tmp = oldAction.mergeWith(a);
-
-	if( tmp!=null ) {
-	  a = tmp;
-	  ia.remove();
-	}
+      if( a!=null ) {
+        actionFound = mergeInto(actions, ns.getAction());
       }
-      actions.add(a);
-      action = a;
     }
 
-    if( actions.size()==1 ) return action;
     if( actions.size()==0 ) return null;
+    if( actions.size()==1 ) return actionFound;
 
     // --- REST IS ERROR HANDLING ---
-    // arriving here, we have a clash, i.e. more than one highes
-    // priority actions. We store all helpful information in an
-    // Object[]. The last element will be a string assembled from
-    // dfaPath and rm. All other elements are the clashing actions.
-    Object[] clash = new Object[actions.size()+1];
-    clash = actions.toArray(clash);
-    //clash[clash.length-2] = action; // was not yet in actions
-
+    // arriving here, we have a clash, i.e. more than one highest
+    // priority action. We store all helpful information in an Clash
+    // object.
 
     // add the very last step to dfaPath
     if( first<=last ) dfaPath.append(first).append(last);
 
     // convert dfaPath into something more readable, folding character
     // ranges with first==last into one character
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     int L = dfaPath.length();
-    for(int i=0; i<L; i+=2) {
+    for(int i = 0; i<L; i += 2) {
       char from, to;
       from = dfaPath.charAt(i);
       to = dfaPath.charAt(i+1);
       if( from==to ) {
-	Misc.printable(sb, from);
+        Misc.printable(sb, from);
       } else {
-	sb.append('[');
-	Misc.printable(sb, from);
-	sb.append('-');
-	Misc.printable(sb, to);
-	sb.append(']');
+        sb.append('[');
+        Misc.printable(sb, from);
+        sb.append('-');
+        Misc.printable(sb, to);
+        sb.append(']');
       }
     }
-    clash[clash.length-1] = sb.toString();
-    clashes.add(clash);
+    Clash c = new Clash(sb.toString(), actions);
+    clashes.add(c);
 
     // correct dfaPath again, otherwise clashing siblings will show
     // the wrong path
     if( first<=last ) dfaPath.setLength(dfaPath.length()-2);
 
-    // return an arbitarily choosen action
-    return action;
+    // return an arbitrarily chosen action
+    return actionFound;
   }
   /********************************************************************/
-  void addTransition(Intervals v, char first, char last, FaState dst) {
-    //System.out.println("adding: "+Misc.printable(first)+
-    //		       ","+Misc.printable(last)+" to "+v);
+  static FaAction mergeInto(Set<FaAction> actions, FaAction other) {
+    for(Iterator<FaAction> ia=actions.iterator(); ia.hasNext(); /**/) {
+      FaAction oldAction = ia.next();
+
+      // Try to merge the two actions either way. This is the
+      // closest to symmetric operation I can think of. Is there a
+      // good way to enforce real symmetry?
+      FaAction merged = other.mergeWith(oldAction);
+      if( merged==null ) {
+        merged = oldAction.mergeWith(other);
+      }
+      if( merged!=null ) {
+        other = merged;
+        ia.remove();
+      }
+    }
+    actions.add(other);
+    return other;
+  }
+  /********************************************************************/
+  void addTransition(Intervals<Set<FaState>> v, 
+                     char first, char last, FaState dst) {
     int from = v.split(first);
     if( from<0 ) {
-      // first fell just on an interval border
+      // first falls just on an interval border
       from = -(from+1);
     } else {
-      // Need a fresh Set for the new interval pos, which starts with
-      // ch
-      @SuppressWarnings("unchecked") 
-      Set<FaState> s = (Set<FaState>)v.getAt(from);
-      if( s!=null ) v.setAt(from, newSet(s));
+      // Need a fresh Set for the new interval pos, which starts with ch
+      Set<FaState> states = v.getAt(from);
+      if( states!=null ) v.setAt(from, newSet(states));
     }
 
     int to = v.size();
@@ -1208,23 +1252,19 @@ public class Nfa  {
       if( to<0 ) {
 	to = -(to+1);
       } else {
-        @SuppressWarnings("unchecked") 
-	Set<FaState> s = (Set<FaState>)v.getAt(to);
-	if( s!=null ) v.setAt(to, newSet(s));
+	Set<FaState> states = v.getAt(to);
+	if( states!=null ) v.setAt(to, newSet(states));
       }
     }
 
     // now we are sure that interval borders nicely fit with first and
     // last
     for(int i=from; i<to; i++) {
-      @SuppressWarnings("unchecked") 
-      Set<FaState> s = (Set<FaState>)v.getAt(i);
+      Set<FaState> s = v.getAt(i);
       if( s==null ) s = newSet();
       s.add(dst);
       v.setAt(i, s);
     }
-
-    //System.out.println("result:"+v);
   }
   /**********************************************************************/
   /**
@@ -1243,7 +1283,7 @@ public class Nfa  {
    * which operates the <code>Dfa</code> created here
    * @param eofAction describes the action to run at the end of input
    * when the resulting Dfa is used with a <code>DfaRun</code>.
-   * 
+   *
    * @throws CompileDfaException if stop states with differing actions
    * are found that can not be merged by their {@link
    * FaAction#mergeWith mergeWith()} methods. To get rid of the
@@ -1252,8 +1292,8 @@ public class Nfa  {
    * can be merged. One way of merging is to use extend {@link
    * AbstractFaAction} and prioritize the assigned actions.
    **/
-  public Dfa compile(DfaRun.FailedMatchBehaviour fmb, FaAction eofAction) 
-    throws CompileDfaException 
+  public Dfa compile(DfaRun.FailedMatchBehaviour fmb, FaAction eofAction)
+    throws CompileDfaException
   {
     FaState tmpStart = compile_p(false);
     return new Dfa(tmpStart, fmb, eofAction);
@@ -1264,36 +1304,26 @@ public class Nfa  {
    * behaviour for non-matching input.</p>
    * @see #compile(DfaRun.FailedMatchBehaviour,FaAction)
    */
-  public Dfa compile(DfaRun.FailedMatchBehaviour fmb) 
-    throws CompileDfaException 
+  public Dfa compile(DfaRun.FailedMatchBehaviour fmb)
+    throws CompileDfaException
   {
     return compile(fmb, null);
   }
-
-//   /**
-//    * @deprecated Use {@link #compile(DfaRun.FailedMatchBehaviour)}
-//    * instead. This method calls it with <code>UNMATCHED_COPY</code>.
-//    */
-//   public Dfa compile() throws CompileDfaException {
-//     return compile(DfaRun.UNMATCHED_COPY, null);
-//   }
 
   // Parameter needEps only decides for inner states if they shall be
   // able to store eps moves later. Currently this is only needed for
   // the invert() method. The start state will allow storage of eps
   // moves anyway so that the result of this compilation can be used
   // in automaton operations like or() again.
-  FaState compile_p(boolean needEps)
-    throws CompileDfaException
-  {
+  FaState compile_p(boolean needEps) throws CompileDfaException {
     // If we find multiple actions on some stop states, these are
     // registered as clashes here and will finally result in an
-    // exception. 
-    Vector<Object[]>clashes = new Vector<Object[]>(3);
+    // exception.
+    List<Clash>clashes = new LinkedList<Clash>();
 
     // reusable container for findAction()
     Set<FaAction> actions = newSet(3);
-  
+
     // If no stop state shows up during compilation, an exception is
     // thrown. This guards against an automaton which recognizes
     // nothing. The construction guarantees that if a stop state is
@@ -1307,20 +1337,20 @@ public class Nfa  {
     eclosure(starters);
 
     // in order to generate a meaningful error message, we keep a
-    // stack of character ranges stored as character here. The
-    // sequence of ranges denotes a shortes path through the Dfa going
-    // to the state the children are currently being constructed.
-    StringBuffer dfaPath = new StringBuffer();
+    // stack of character ranges stored as characters here. The
+    // sequence of ranges denotes a shortest path through the Dfa going
+    // to the state the children of which are currently being constructed.
+    StringBuilder dfaPath = new StringBuilder();
 
     // Even the start state can have an action associated and thereby
     // be a stop state. This is important for subsequent applications
-    // of Nfa-operations like shortest(). 
+    // of Nfa-operations like shortest().
     // The start state will always have the possibility of epsilon
-    // transtions going out in case the automaton will be subject to
+    // transitions going out in case the automaton will be subject to
     // later operations like 'or'.
     FaAction startAction = findAction(dfaPath, '1', '0',
 				      clashes, actions, starters);
-    FaState dfaStart = 
+    FaState dfaStart =
       AbstractFaState.createDfaState(startAction, true);
     dfaStart.mergeSubinfos(starters);
     haveStopState |= startAction!=null;
@@ -1332,35 +1362,26 @@ public class Nfa  {
 
 
     // The stack keeps track of states the children of which still
-    // need to be constructed. On the stack are triples with the
-    // following elements:
-    // 1) an int[3], (first, last, no) tells us that the state can be
-    // reached in no steps from the start state of the Dfa where the
-    // last step is by a character range [first,last]
-    // 2) a Set of nfa states representing the dfa state
-    // 3) a dfa state which does not have its transition table
-    // constructed.
-    Stack<Object> stack = new Stack<Object>();
-    int[] step0 = {0, 0, 0};	// a dummy
-    stack.push(step0);
-    stack.push(starters);
-    stack.push(dfaStart);
+    // need to be constructed. The CompileTask stores the number of steps
+    // that lead to a the stored dfaState, the character interval of the last
+    // transition as well as the set of Nfa states that represent the dfa state.
+
+    LinkedList<CompileTask> stack = new LinkedList<>();
+    stack.add(new CompileTask(dfaStart, 0, (char)0, (char)0, starters));
 
     // this is the transition table we will use over and over again so
     // that it can grow to a typical required size internally. The
     // transition tables used in generated states are then copied from
     // it.
-    Intervals currentTrans = new Intervals();
+    Intervals<Set<FaState>> currentTrans = new Intervals<>();
+    IntervalsFaState dfaTrans = new IntervalsFaState();
+
     while( stack.size()>0 ) {
-      // The stack has always a dfa-state and its defining set of nfa
-      // states 
-      FaState currentState = (FaState)stack.pop();
-      Set currentNfaSet = (Set)stack.pop();
-      int[] howWeCameHere = (int[])stack.pop();
-      if( howWeCameHere[2]>0 ) {
-	dfaPath.setLength(howWeCameHere[2]*2-2);
-	dfaPath.append((char)howWeCameHere[0])
-	  .append((char)howWeCameHere[1]);
+      CompileTask currentTask = stack.removeLast();
+      if( currentTask.steps>0 ) {
+	dfaPath.setLength(2*currentTask.steps-2);
+	dfaPath.append(currentTask.chLeft);
+	dfaPath.append(currentTask.chRight);
       }
 
       // loop over nfa-states which define current and over all of
@@ -1368,63 +1389,55 @@ public class Nfa  {
       // currentTrans. Note that during this operation, the objects
       // stored in currentTrans are not destination states but
       // Sets of destination states.
-      for(Iterator i=currentNfaSet.iterator(); i.hasNext(); /**/) {
-	CharTrans trans = ((FaState)i.next()).getTrans();
+      currentTrans.reset();
+      for(FaState nfaState : currentTask.nfaStates) {
+        CharTrans trans = nfaState.getTrans();
 	if( trans==null ) continue;
 	int L = trans.size();
 	for(int j=0; j<L; j++) {
 	  char first = trans.getFirstAt(j);
 	  char last = trans.getLastAt(j);
-	  FaState st = (FaState)trans.getAt(j);
+	  FaState st = trans.getAt(j);
 	  addTransition(currentTrans, first, last, st);
 	}
       }
-      // System.err.println("+++ "+currentTrans);
+
       // Convert the generated sets of NFA states which are stored in
       // currentTrans to unique ones and replace the transition
       // destination by the respective DFA state. The latter either
-      // exists already or will be created right here.
+      // exists already or will be created right heree.
       int L = currentTrans.size();
-      //System.out.println(">>> "+currentTrans);
+      dfaTrans.reset();
       for(int i=0; i<L; i++) {
-        @SuppressWarnings("unchecked")
-        Set<FaState> stateSet = (Set<FaState>)currentTrans.getAt(i);
-	if( stateSet==null ) continue;
+        Set<FaState> stateSet = currentTrans.getAt(i);
+	if( stateSet==null ) {
+	  continue;
+	}
+
 	eclosure(stateSet);
-	FaState dst = (FaState)known.get(stateSet);
-	//System.out.println(""+i+"-->"+dst);
-	if( dst!=null ) {
-	  // A set containing exactly the same states as the one just
-	  // built for rm is already known. Consequently we don't have
-	  // to handle that again, but just use the value stored for
-	  // it.
-	} else {
-	  // The set stored at rm.o is new. We create a DFA state for
-	  // it, store the pair in known and push both on the stack
-	  char first = currentTrans.getFirstAt(i);
-	  char last = currentTrans.getLastAt(i);
+	FaState dst = known.get(stateSet);
+
+	char first = currentTrans.getFirstAt(i);
+	char last = currentTrans.getLastAt(i);
+	if( dst==null ) {
 	  FaAction a = findAction(dfaPath, first, last,
 				  clashes, actions, stateSet);
 	  haveStopState |= a!=null;
 	  dst = AbstractFaState.createDfaState(a, needEps);
 	  dst.mergeSubinfos(stateSet);
-	  int[] step = new int[3];
-	  step[0] = first; 
-	  step[1] = last; 
-	  step[2] = howWeCameHere[2]+1;
+
+	  CompileTask t =
+	      new CompileTask(dst, currentTask.steps+1, first, last, stateSet);
+	  stack.add(t);
 	  known.put(stateSet, dst);
-	  stack.push(step);
-	  stack.push(stateSet);
-	  stack.push(dst);
 	}
-	currentTrans.setAt(i, dst);
+	dfaTrans.overwrite(first, last, dst);
       }
 
-      // make a (space minimal) copy of currentTrans and stick it into
+      // make a (space minimal) copy of dfaTrans and stick it into
       // the current state finally.
-      CharTrans ct = currentTrans.toCharTrans();
-      //System.out.println("resulting transition:"+ct);
-      currentState.setTrans(ct);
+      CharTrans ct = dfaTrans.toCharTrans(memoryForSpeedTradeFactor);
+      currentTask.dfaState.setTrans(ct);
     }
     if( clashes.size()>0 ) {
       throw new CompileDfaException(clashToString(clashes));
@@ -1434,27 +1447,42 @@ public class Nfa  {
       // The resulting automaton recognizes nothing, not even the
       // empty string. Should there be now a huge network of states,
       // they are useless. We return a much more concise
-      // representation of an automaton which matching nothing:
+      // representation of an automaton which matches nothing.
       return AbstractFaState.createDfaState(null, true);
     }
 
-    if( false ) {
-      System.out.println("known.size()="+known.size());
-      Set v = known.keySet();
-      Iterator it = v.iterator();
-      int count = 0;
-      while( it.hasNext() ) {
-	Set s = (Set)it.next();
-	count += s.size();
-      }
-      System.err.println("all states in known:"+count);
-    }
     return dfaStart;
+  }
+  /*+******************************************************************/
+  private static class CompileTask {
+    final char chLeft;
+    final int steps;
+    final char chRight;
+    final Set<FaState> nfaStates;
+    final FaState dfaState;
+
+    CompileTask(FaState dfaState, int steps, char chLeft, char chRight,
+                Set<FaState> nfaStates) {
+      this.chLeft = chLeft;
+      this.chRight = chRight;
+      this.steps = steps;
+      this.nfaStates = nfaStates;
+      this.dfaState = dfaState;
+    }
+  }
+  //-*****************************************************************
+  private static final class Clash {
+    final String message;
+    final List<FaAction> actions;
+    public Clash(String message, Set<FaAction> actions) {
+      this.message = message;
+      this.actions = new LinkedList<>(actions);
+    }
   }
   //-*****************************************************************
   private class ParserView implements NfaParserView {
     private List<FaState> startStack = new ArrayList<FaState>();
-    private List<AbstractFaState.EpsState> lastStack 
+    private List<AbstractFaState.EpsState> lastStack
       = new ArrayList<AbstractFaState.EpsState>();
 
     private <T> T pop(List<T> stack) {
@@ -1470,42 +1498,60 @@ public class Nfa  {
       lastStack.clear();
     }
 
+    @Override
     public void pushCharSet(CharSequence pairs, boolean invert) {
       startStack.add(start);
       lastStack.add(lastState);
       initialize(pairs, invert);
     }
+    @Override
     public void pushDot() {
       pushCharSet("\u0000\uFFFF", false);
     }
+    @Override
     public void pushString(CharSequence str) {
       startStack.add(start);
       lastStack.add(lastState);
-      initialize(str);      
+      initialize(str);
     }
+    @Override
     public void swap() {
       start = swap(startStack, start);
       lastState = swap(lastStack, lastState);
     }
+    @Override
     public void or() {
       FaState oldStart = pop(startStack);
       AbstractFaState.EpsState oldLast = pop(lastStack);
       initializeAsOr(oldStart, oldLast, start, lastState);
     }
+    @Override
     public void seq() {
       FaState oldStart = pop(startStack);
       AbstractFaState.EpsState oldLast = pop(lastStack);
       initializeAsSequence(oldStart, oldLast, start, lastState);
     }
-    
+
+    @Override
     public void star() { Nfa.this.star(); }
+    @Override
     public void plus() { Nfa.this.plus(); }
+    @Override
     public void optional() { Nfa.this.optional(); }
+    @Override
+    public void allPrefixes() throws CompileDfaException {
+      Nfa.this.allPrefixes(); 
+    }
+    
+    @Override
     public void not() throws CompileDfaException { Nfa.this.not(); }
+    @Override
     public void invert() throws CompileDfaException { Nfa.this.invert(); }
+    @Override
     public void shortest() throws CompileDfaException { Nfa.this.shortest(); }
+    @Override
     public boolean markAsSub() { return Nfa.this.markAsSub(); }
   }
   //-*****************************************************************
 }
- 
+
